adding Junits + http exception handling

--- a/LogAggregationAgent/src/main/resources/agent.properties
+++ b/LogAggregationAgent/src/main/resources/agent.properties
@@ -1,4 +1,5 @@
 defaultWaitInterval=2000
+slowDownDueToOverloadInterval=10000
 defaultChunkSize=4
 defaultAgentId=LogForwardingAgent1
 logFilePath=src/main/resources/logfile.log
