--- a/LogAggregationAgent/pom.xml
+++ b/LogAggregationAgent/pom.xml
@@ -53,5 +53,26 @@
 			<version>2.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.11.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
