--- a/LogAggregationService/pom.xml
+++ b/LogAggregationService/pom.xml
@@ -57,6 +57,12 @@
 			<artifactId>dto</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
         
 	</dependencies>
 
