--- a/LogAggregationAgent/pom.xml
+++ b/LogAggregationAgent/pom.xml
@@ -15,6 +15,25 @@
 		<java-version>1.8</java-version>
 	</properties>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>log.forwarding.agent.AgentMain</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -73,6 +92,6 @@
 			<version>4.3.11.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 </project>
